--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & open -a \"Google Chrome\" http://localhost:3000",
     "dev:server": "next dev & json-server --watch ./server/db.json --port 3001 & open -a \"Google Chrome\" http://localhost:3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "clsx": "^1.1.1",
     "mongodb": "^4.5.0",
     "next": "12.1.0",
