--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "clsx": "^1.1.1",
+    "d3": "^7.9.0",
+    "haversine-distance": "^1.2.3",
     "mongodb": "^4.5.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "unzipper": "^0.12.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/unzipper": "^0.10.11",
+    "@types/xml2js": "^0.4.14",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
