--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fair-enough-trips",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "next dev & open -a \"Google Chrome\" http://localhost:3000",
     "dev:server": "next dev & json-server --watch ./server/db.json --port 3001 & open -a \"Google Chrome\" http://localhost:3000",
@@ -26,13 +27,14 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
-    "@types/node": "17.0.21",
+    "@types/node": "^17.0.45",
     "@types/react": "17.0.40",
     "@types/unzipper": "^0.10.11",
     "@types/xml2js": "^0.4.14",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
-    "typescript": "4.6.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^4.6.2"
   },
   "engines": {
     "node": ">=22"
