--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.1.1",
     "d3": "^7.9.0",
     "haversine-distance": "^1.2.3",
+    "lqip-modern": "^2.2.1",
     "mongodb": "^4.5.0",
     "next": "12.1.0",
     "react": "17.0.2",
