--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sharp": "^0.34.1",
     "unzipper": "^0.12.3",
     "word-wrap": "^1.2.5",
     "xml2js": "^0.6.2"
