--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "clsx": "^1.1.1",
     "d3": "^7.9.0",
+    "dotenv": "^16.5.0",
     "haversine-distance": "^1.2.3",
     "lqip-modern": "^2.2.1",
     "mongodb": "^4.5.0",
