--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "dev:server": "next dev & json-server --watch ./server/db.json --port 3001 & open -a \"Google Chrome\" http://localhost:3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "process-images": "./script/process-images/process-images.sh",
+    "upload-images": "./script/upload-images/upload-images.sh"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.812.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
