--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fair-enough-trips",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "type": "commonjs",
   "scripts": {
@@ -10,7 +10,8 @@
     "start": "next start",
     "lint": "next lint",
     "process-images": "./script/process-images/process-images.sh",
-    "upload-images": "./script/upload-images/upload-images.sh"
+    "upload-images": "./script/upload-images/upload-images.sh",
+    "cleanup": "./script/cleanup/cleanup.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.812.0",
