--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "create-poi": "./script/create-poi/create-poi.sh",
     "set-poi-index": "./script/set-poi-index/set-poi-index.sh",
     "create-lqip": "./script/create-lqip/create-lqip.sh",
-    "upload-post": "./script/upload-post/upload-post.sh",
-    "prepare-route-scheme": "./script/prepare-route-scheme/prepare-route-scheme.sh"
+    "prepare-route-scheme": "./script/prepare-route-scheme/prepare-route-scheme.sh",
+    "publish": "./script/publish/publish.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.812.0",
