--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,7 @@
   "crons": [
     {
       "path": "/api/publish",
-      "schedule": "0 18 * * 1,5",
-      "headers": {
-        "x-vercel-cron-secret": "@cron_secret"
-      }
+      "schedule": "0 18 * * 1,5"
     }
   ]
 }
