--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
     "build-post": "npx tsx ./build-post.ts"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.812.0",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "archiver": "^7.0.1",
-    "clsx": "^1.1.1",
-    "d3": "^7.9.0",
-    "dotenv": "^16.5.0",
-    "exif-parser": "^0.1.12",
-    "haversine-distance": "^1.2.3",
-    "lqip-modern": "^2.2.1",
-    "mongodb": "^4.5.0",
+    "@aws-sdk/client-s3": "3.812.0",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-regular-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@fortawesome/react-fontawesome": "0.1.18",
+    "archiver": "7.0.1",
+    "clsx": "1.1.1",
+    "d3": "7.9.0",
+    "dotenv": "16.5.0",
+    "exif-parser": "0.1.12",
+    "haversine-distance": "1.2.3",
+    "lqip-modern": "2.2.1",
+    "mongodb": "4.5.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sharp": "^0.34.1",
-    "unzipper": "^0.12.3",
-    "word-wrap": "^1.2.5",
-    "xml2js": "^0.6.2"
+    "sharp": "0.34.1",
+    "unzipper": "0.12.3",
+    "word-wrap": "1.2.5",
+    "xml2js": "0.6.2"
   },
   "devDependencies": {
-    "@types/archiver": "^6.0.3",
-    "@types/d3": "^7.4.3",
-    "@types/node": "^17.0.45",
+    "@types/archiver": "6.0.3",
+    "@types/d3": "7.4.3",
+    "@types/node": "17.0.45",
     "@types/react": "17.0.40",
-    "@types/unzipper": "^0.10.11",
-    "@types/xml2js": "^0.4.14",
+    "@types/unzipper": "0.10.11",
+    "@types/xml2js": "0.4.14",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^4.6.2"
+    "ts-node": "10.9.2",
+    "typescript": "4.6.2"
   },
   "engines": {
     "node": ">=22"
